--- a/src/main/webapp/resources/components/AbstractButtons.xhtml
+++ b/src/main/webapp/resources/components/AbstractButtons.xhtml
@@ -15,10 +15,10 @@
     <!-- IMPLEMENTATION -->
     <cc:implementation>
         <h:panelGroup id="botones">
-            <p:commandButton value="Crear" update="#{cc.attrs.update}" actionListener="#{cc.attrs.backingBean.btnAgregarHandler}" oncomplete="PF('sucursal').hide()" />
-            <p:commandButton value="Editar" update="#{cc.attrs.update}" actionListener="#{cc.attrs.backingBean.btnEditarHandler}" rendered="#{cc.attrs.idbackingBean != null}" oncomplete="PF('sucursal').hide()" />
-            <p:commandButton value="Borrar" update="#{cc.attrs.update}" actionListener="#{cc.attrs.backingBean.btnEliminarHandler}" rendered="#{cc.attrs.idbackingBean != null}" oncomplete="PF('sucursal').hide()" />
-            <p:commandButton value="Cancelar" update="#{cc.attrs.update}" actionListener="#{cc.attrs.backingBean.btnCancelarHandler}" oncomplete="PF('sucursal').hide()" />
+            <p:commandButton value="Crear" update="#{cc.attrs.update}" actionListener="#{cc.attrs.backingBean.btnAgregarHandler}" oncomplete="PF('crud').hide()" />
+            <p:commandButton value="Editar" update="#{cc.attrs.update}" actionListener="#{cc.attrs.backingBean.btnEditarHandler}" rendered="#{cc.attrs.idbackingBean != null}" oncomplete="PF('crud').hide()" />
+            <p:commandButton value="Borrar" update="#{cc.attrs.update}" actionListener="#{cc.attrs.backingBean.btnEliminarHandler}" rendered="#{cc.attrs.idbackingBean != null}" oncomplete="PF('crud').hide()" />
+            <p:commandButton value="Cancelar" update="#{cc.attrs.update}" actionListener="#{cc.attrs.backingBean.btnCancelarHandler}" oncomplete="PF('crud').hide()" />
         </h:panelGroup>
     </cc:implementation>
 </html>
