--- a/src/main/webapp/resources/components/AbstractButtons.xhtml
+++ b/src/main/webapp/resources/components/AbstractButtons.xhtml
@@ -8,17 +8,16 @@
     <!-- INTERFACE -->
     <cc:interface>
         <cc:attribute name="backingBean" required="true"/>
-        <cc:attribute name="idbackingBean" required="true"/>
         <cc:attribute name="update" default=":da, :Datos"/>
     </cc:interface>
 
     <!-- IMPLEMENTATION -->
     <cc:implementation>
         <h:panelGroup id="botones">
-            <p:commandButton value="Crear" update="#{cc.attrs.update}" actionListener="#{cc.attrs.backingBean.btnAgregarHandler}" oncomplete="PF('crud').hide()" rendered="#{cc.attrs.idbackingBean == null}"/>
-            <p:commandButton value="Editar" update="#{cc.attrs.update}" actionListener="#{cc.attrs.backingBean.btnEditarHandler}" rendered="#{cc.attrs.idbackingBean != null}" oncomplete="PF('crud').hide()" />
-            <p:commandButton value="Borrar" update="#{cc.attrs.update}" actionListener="#{cc.attrs.backingBean.btnEliminarHandler}" rendered="#{cc.attrs.idbackingBean != null}" oncomplete="PF('crud').hide()" />
-            <p:commandButton value="Cancelar" update="#{cc.attrs.update}" actionListener="#{cc.attrs.backingBean.btnCancelarHandler}" oncomplete="PF('crud').hide()" />
+            <p:commandButton value="Crear" update="#{cc.attrs.update}" actionListener="#{cc.attrs.backingBean.btnAgregarHandler}"  rendered="#{cc.attrs.backingBean.acciones=='NUEVO'}"/>
+            <p:commandButton value="Editar" update="#{cc.attrs.update}" actionListener="#{cc.attrs.backingBean.btnEditarHandler}" rendered="#{cc.attrs.backingBean.acciones=='EDITAR'}" />
+            <p:commandButton value="Borrar" update="#{cc.attrs.update}" actionListener="#{cc.attrs.backingBean.btnEliminarHandler}" rendered="#{cc.attrs.backingBean.acciones=='EDITAR'}" />
+            <p:commandButton value="Cancelar" update="#{cc.attrs.update}" actionListener="#{cc.attrs.backingBean.btnCancelarHandler}"  />
         </h:panelGroup>
     </cc:implementation>
 </html>
