si se logro asiento...falta sala

--- a/src/main/webapp/resources/components/AbstractButtons.xhtml
+++ b/src/main/webapp/resources/components/AbstractButtons.xhtml
@@ -15,8 +15,8 @@
     <cc:implementation>
         <h:panelGroup id="botones">
             <p:commandButton value="Crear" update="#{cc.attrs.update}" actionListener="#{cc.attrs.backingBean.btnAgregarHandler}"  rendered="#{cc.attrs.backingBean.acciones=='NUEVO'}"/>
-            <p:commandButton value="Editar" update="#{cc.attrs.update}" actionListener="#{cc.attrs.backingBean.btnEditarHandler}" rendered="#{cc.attrs.backingBean.acciones=='EDITAR'}" />
-            <p:commandButton value="Borrar" update="#{cc.attrs.update}" actionListener="#{cc.attrs.backingBean.btnEliminarHandler}" rendered="#{cc.attrs.backingBean.acciones=='EDITAR'}" />
+            <p:commandButton value="Editar" update="#{cc.attrs.update}" actionListener="#{cc.attrs.backingBean.btnEditarHandler}" rendered="#{cc.attrs.backingBean.acciones=='OTHER'}" />
+            <p:commandButton value="Borrar" update="#{cc.attrs.update}" actionListener="#{cc.attrs.backingBean.btnEliminarHandler}" rendered="#{cc.attrs.backingBean.acciones=='OTHER'}" />
             <p:commandButton value="Cancelar" update="#{cc.attrs.update}" actionListener="#{cc.attrs.backingBean.btnCancelarHandler}"  />
         </h:panelGroup>
     </cc:implementation>
