--- a/src/main/webapp/resources/template/pagesTemplate.xhtml
+++ b/src/main/webapp/resources/template/pagesTemplate.xhtml
@@ -17,12 +17,15 @@
                     <p:menuitem value="Inicio" icon="ui-icon-home" outcome="/index.xhtml"/>
                     <p:submenu label="Entidades" icon="ui-icon-note">
                         <p:menuitem value="Caracteristica de Asiento" outcome="/paginas/CaracteristicaAsiento.jsf"/>
-                        <p:menuitem value="Sucursal" outcome="/paginas/Sucursal.jsf"/>                        
+                        <p:menuitem value="Sucursal" outcome="/paginas/Sucursal.jsf"/>
+                        <p:menuitem value="Asiento" outcome="/paginas/Asientos.jsf"/>                        
+                        <p:menuitem value="Sala" outcome="/paginas/Sala.jsf"/>                        
+                        
                     </p:submenu>
                     <p:submenu label="Integrantes" icon="ui-icon-note">
-                        <p:menuitem value="Primero"/>
-                        <p:menuitem value="Segundo"/>
-                        <p:menuitem value="Tercero"/>
+                        <p:menuitem value="Melvin Merlos"/>
+                        <p:menuitem value="Carlos .."/>
+                        <p:menuitem value="Vladmir Martinez"/>
                     </p:submenu>
                 </p:menubar>
                 <br></br>             
